HUDF-1319 fix for date wrapping on recent calls @clnielsen

--- a/FJSHUD/app/styles/calls.less
+++ b/FJSHUD/app/styles/calls.less
@@ -344,7 +344,7 @@
 
 
   .RecentDate{
-    width:25%;
+    width:30%;
 
   }
   .RecentFromTo{
@@ -357,7 +357,7 @@
     }
  }
   .RecentDur{
-    width:15%;
+    width:5%;
     text-align:center;
   }
 }
